--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,14 @@
 ---
 dependencies:
   - colstrom.java
+
+galaxy_info:
+  author: Aaron Pederson
+  description: Webgoat - a deliberately insecure JavaEE application to teach application security
+  license: MIT
+  platforms:
+    - name: Ubuntu
+      versions:
+      - trusty
+  categories:
+    - security
