Added License, updated readme and meta/main for galaxy use.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 dependencies:
-  - colstrom.java
+  - telusdigital.java
 
 galaxy_info:
   author: Aaron Pederson
@@ -9,6 +9,6 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
-      - trusty
+        - trusty
   categories:
-    - security
+    - development
