--- a/tests/test.yml
+++ b/tests/test.yml
@@ -2,5 +2,5 @@
 - hosts: localhost
   remote_user: root
   roles:
-    - role: telusdigital.java
+    - role: telusdigital.ansible-java
     - role: ansible-webgoat
