--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -4,7 +4,7 @@
     dest: /etc/init.d/tomcat7
     line: JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
     insertafter: '^JAVA_TMP'
-  notify: Reload Service | tomcat
+  notify: restart service | tomcat
   tags:
     - configuration
     - initscript
@@ -14,7 +14,7 @@
   template:
     src: etc/tomcat7/tomcat-users.xml
     dest: /etc/tomcat7/tomcat-users.xml
-  notify: Reload Service | tomcat
+  notify: restart service | tomcat
   tags:
     - configuration
     - tomcat
@@ -23,7 +23,7 @@
   get_url:
     url: 'https://webgoat.googlecode.com/files/WebGoat-5.4.war'
     dest: /var/lib/tomcat7/webapps/webgoat.war
-  notify: Reload Service | tomcat
+  notify: restart service | tomcat
   tags:
     - installation
     - webgoat
